# homework_lesson_16

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
pages/: filters_page.py  main_page.py  search_results_page.py
tests/: test_filters.py  test_main_page.py  test_sorting.py
utils/: attach.py
